Abstruct class for refacoring