@@ -4,25 +4,12 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-public class Instruction {
-    private final List<String> entries;
-    private int currentEntry = 0;
+public class Instruction extends MenuManager{
+
     public Instruction() {
-        this.entries = Arrays.asList("press enter to go back to the menu");
-    }
-
-    public String getEntry(int i) {
-        return entries.get(i);
-    }
-
-    public boolean isSelected(int i) {
-        return currentEntry == i;
+        super(List.of("press enter to go back to the menu"));
     }
     public boolean isSelectedEnter() {
         return true;
-    }
-
-    public int getNumberEntries() {
-        return this.entries.size();
     }
 }
